<resources>
    <string name="app_name">FinalToDoApp</string>
    <string name="splash_welcome_text">Welcome to Next Gen TODO App</string>

    <string name="login_login_text">Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_username_required">Username Required</string>
    <string name="login_password_required">Password Required</string>
    <string name="login_invalid_login">Invalid username or password</string>
    <string name="login_login_button">Login</string>
    <string name="login_cancel_button">Cancel</string>

    <string name="login_quit_app_dialog">Do you want to quit the application?</string>
    <string name="login_quit_app_ok">OK</string>
    <string name="login_quit_app_cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_todo_add_your_todo_task">Add Your TODO Task</string>
    <string name="edit_todo_title">Title</string>
    <string name="edit_todo_description">Description</string>
    <string name="edit_todo_date">Date</string>
    <string name="edit_todo_priority">Priority</string>
    <string name="edit_todo_priority_high">High</string>
    <string name="edit_todo_priority_medium">Medium</string>
    <string name="edit_todo_priority_low">Low</string>
    <string name="edit_todo_is_completed">Is Completed</string>
    <string name="edit_todo_save">Save</string>

    <string name="edit_todo_cancel_prompt">Do you want to return to main screen?</string>

    <string name="edit_todo_task_inserted">Todo saved</string>
    <string name="edit_todo_task_updated">Todo updated</string>
    <string name="edit_todo_task_deletedById">Swapped item is deleted</string>
    <string name="edit_todo_task_deletedAll">All items deleted</string>

    <string name="edit_todo_update">Update</string>

    <string name="edit_logout">Do you want To logout?</string>


</resources>
