<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditTodoFragment" >

    <TextView
        android:id="@+id/edit_todo_lbl_add_your_todo_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/edit_todo_add_your_todo_task"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edit_todo_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/edit_todo_title"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edit_todo_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:ems="10"
        android:hint="@string/edit_todo_description"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edit_todo_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/edit_todo_date"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/edit_todo_lbl_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/edit_todo_priority"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/edit_todo_rg_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/edit_todo_rb_priority_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:text="@string/edit_todo_priority_high"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/edit_todo_rb_priority_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:gravity="fill_vertical"
            android:text="@string/edit_todo_priority_medium"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/edit_todo_rb_priority_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:text="@string/edit_todo_priority_low"
            android:textSize="18sp" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/edit_todo_chk_is_completed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/edit_todo_is_completed"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/edit_todo_btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/edit_todo_save"
            android:textSize="24sp" />

        <Button
            android:id="@+id/edit_todo_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/login_cancel_button"
            android:textSize="24sp" />
    </LinearLayout>
</LinearLayout>